Updated css to not be nested (b/c my IDE is having issues processes such bleeding-edge formatting, not yet supported in all browsers lol)

--- a/assets/overlay-window/overlay.css
+++ b/assets/overlay-window/overlay.css
@@ -7,21 +7,9 @@ canvas {
 	position: absolute;
 	top: 0;
 	left: 0;
-
-	&.transparent {
-	}
-
-	&.box1,
-	&.box2 {
-		opacity: 0.5;
-	}
-
-	&.box1 {
-
-	}
-
-	&.box2 {
-
-	}
 }
 
+canvas.box1,
+canvas.box2 {
+	opacity: 0.5;
+}
